Fix: change to mutable list - Update README.md - Update screenshots